# recordly

./: .gitignore  README.md  main.py  pyproject.toml  recordly.spec  requirements.txt  setup.py
.aur/: .SRCINFO  PKGBUILD
app/: config.py  constants.py  export_controller.py  main_window.py  project_session.py  recording_controller.py
core/: _gradient.py  aspect_ratio.py  audio_capture.py  camera.py  commands.py  compositor.py  cursor_effects.py  effects.py  exporter.py  frame_style.py  pointer_tracker.py  project.py  project_manager.py  recorder.py  screen_capture.py  shortcuts.py  speed.py
debian/: changelog  control  copyright  io.github.devcxl.recordly.appdata.xml  recordly-entry.sh  recordly.desktop  rules
resources/: style.qss
tests/: conftest.py  test_aspect_ratio.py  test_audio_capture.py  test_camera.py  test_commands.py  test_compositor.py  test_config.py  test_cursor_effects.py  test_data_persistence.py  test_editor_shortcut_integration.py  test_effects.py  test_export_controller.py  test_exporter.py  test_frame_style.py  test_frames_data.py  test_main_window.py  test_pointer_tracker.py  test_preview_widget.py  test_project.py  test_project_manager.py  test_project_session.py  test_recorder.py  test_recording_controller.py  test_recording_roundtrip.py  test_screen_capture.py  test_settings_dialog.py  test_shortcuts.py  test_speed.py  test_timeline.py
tools/: profile_export.py
ui/: annotation_panel.py  crop_overlay.py  export_dialog.py  home_page.py  preview_widget.py  project_card.py  project_gallery.py  settings_dialog.py  timeline.py
(+117 files in other folders)
