[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recordly"
version = "1.0.3"
description = "开源屏幕录制与回放工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "devcxl", email = "64475363+devcxl@users.noreply.github.com"},
]
urls = {repository = "https://github.com/devcxl/recordly"}
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "Pillow>=10.0",
    "numpy>=1.24",
    "mss>=9.0",
    "opencv-python-headless>=4.8",
    "pynput>=1.7",
    "sounddevice>=0.5",
    "ffmpeg-python>=0.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
recordly = "main:main"

[tool.setuptools.packages.find]
include = ["app*", "core*", "ui*", "resources*"]

[tool.setuptools.package-data]
resources = ["icons/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
